tests/golden/type_errors/generic_conflicting_inference.cd
fun same<T>(left: T, right: T): T { return left; }
same(1, "x");
